--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <title>Document</title>
     </head>
     <body>
-        <h1> Hello World</h1>
-        <h2> Omg My God</h2>
+        <h1> All Products</h1>
+        <ul id='productsContainer'>
+
+            </ul>
+
+            <script src='app.js'></script>
     </body>
 </html>
