--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<! DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset = "UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1> All Products</h1>
-        <ul id='productsContainer'>
+<!DOCTYPE html>
+<html lang='en'>
+<head>
 
-            </ul>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>Document</title>
 
-            <script src='app.js'></script>
-    </body>
+</head>
+<body>
+
+  <h1>All Products</h1>
+  <ul id='productsContainer'>
+
+  </ul>
+
+  <script src='app.js'></script>
+
+</body>
 </html>
