--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <ul id='productsContainer'>
 
   </ul>
+<div id="root"></div>
 
   <script src='app.js'></script>
-
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </body>
 </html>
