--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <ul id='productsContainer'>
 
   </ul>
-<div id="root"></div>
+  
+<div id='root'></div>
 
   <script src='app.js'></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
