--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div id="root"></div>
 
   <script src='app.js'></script>
+  <script src='textREACT.js'></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </body>
